--- a/ECommerceApi/ECommerceApi.csproj
+++ b/ECommerceApi/ECommerceApi.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ECommerceService\ECommerceCore.csproj" />
+    <ProjectReference Include="..\ECommerceCore\ECommerceCore.csproj" />
   </ItemGroup>
 
 
