--- a/ECommerceApi/ECommerceApi.csproj
+++ b/ECommerceApi/ECommerceApi.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ECommerceCore\ECommerceCore.csproj" />
   </ItemGroup>
 
