--- a/ECommerceApi/log4net.config
+++ b/ECommerceApi/log4net.config
@@ -1,30 +1,15 @@
 ﻿<log4net>
-  <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-    <lockingmodel type="log4net.Appender.FileAppender+MinimalLock">
-      <file value="logs/">
-        <datepattern value="yyyy-MM-dd hh.'txt'">
-          <staticlogfilename value="false">
-            <appendtofile value="true">
-              <rollingstyle value="Composite">
-                <maxsizerollbackups value="2">
-                  <maximumfilesize value="15MB">
-                    <layout type="log4net.Layout.PatternLayout">
-                      <conversionpattern value="%level  %message  %date">
-                      </conversionpattern>
-                    </layout>
-                  </maximumfilesize>
-                </maxsizerollbackups>
-              </rollingstyle>
-            </appendtofile>
-          </staticlogfilename>
-        </datepattern>
-      </file>
-    </lockingmodel>
+  <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+    <file value="ECommerceApiLog" />
+    <appendToFile value="true" />
+    <maximumFileSize value="100KB" />
+    <maxSizeRollBackups value="2" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date %5level %logger.%method [%line] - MESSAGE: %message%newline %exception" />
+    </layout>
   </appender>
   <root>
-    <level value="ALL">
-      <appender-ref ref="RollingLogFileAppender">
-      </appender-ref>
-    </level>
+    <level value="TRACE" />
+    <appender-ref ref="RollingFile" />
   </root>
 </log4net>
